--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@prisma/client": "^5.0.0",
     "fastify": "^4.20.0"
   }
